# underground-chat-cli

./: .env.example  .gitignore  README.rst  pyproject.toml  requirements.txt
tests/: test_underground_chat_cli.py
underground_chat_cli/: .env.example  main.py  reader_chat.py  send_message.py
